test/compile-errors/extern-errors.crow
r record extern
	a string
	b list nat64

r2 record extern by-val
	a nat64

r3 record extern by-ref
	a nat64

u union extern
	a string

f void() extern

f void() extern<c>

f string() extern<c>

f void(a string) extern<c>

f<a> void(a a) extern<c>

f void(...a array nat64) extern<c>

some-spec spec
	foo void()

f void() extern<c> some-spec

f void() extern<c> noctx

f void() extern<c> unsafe

g nat() extern<c> global<c>

g nat() global

g nat() global<c> noctx

g nat() global<c> unsafe

g nat() global<c> trusted
